--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_dropdown.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_dropdown.scss
@@ -35,7 +35,7 @@
 
 /* REDESIGN_PENDING: this .dropdown class will be very likely deprecated */
 .dropdown{
-  @apply absolute bg-white border-2 border-gray-3 rounded min-w-max drop-shadow-md text-left;
+  @apply absolute bg-white border-2 border-gray-3 rounded min-w-max drop-shadow-md text-left z-10;
 
   & > *{
     @apply relative z-10;
