--- a/decidim-comments/app/cells/decidim/comments/comments/add_comment.erb
+++ b/decidim-comments/app/cells/decidim/comments/comments/add_comment.erb
@@ -6,16 +6,19 @@
         <span class="show-for-sr py-1.5"><%= t("decidim.components.add_comment_form.opinion.label") %></span>
         <button aria-pressed="false" class="button button__sm button__text-secondary opinion-toggle--ok" data-selected-label="<%= t("decidim.components.add_comment_form.opinion.positive_selected") %>">
           <%= icon "thumb-up-line" %>
+          <%= icon "thumb-up-fill" %>
           <span class="show-for-sr"><%= t("decidim.components.add_comment_form.opinion.positive") %></span>
         </button>
         <button aria-pressed="true" class="button button__sm button__text-secondary opinion-toggle--meh is-active" data-selected-label="<%= t("decidim.components.add_comment_form.opinion.neutral_selected") %>">
-          <%= t("decidim.components.add_comment_form.opinion.neutral") %>
+          <span class="show-for-sr"><%= t("decidim.components.add_comment_form.opinion.neutral") %>
+          </span>
         </button>
         <button aria-pressed="false" class="button button__sm button__text-secondary opinion-toggle--ko" data-selected-label="<%= t("decidim.components.add_comment_form.opinion.negative_selected") %>">
           <%= icon "thumb-down-line" %>
+          <%= icon "thumb-down-fill" %>
           <span class="show-for-sr"><%= t("decidim.components.add_comment_form.opinion.negative") %></span>
         </button>
-        <div role="alert" aria-live="assertive" aria-atomic="true" class="selected-state show-for-sr"></div>
+        <div role="alert" aria-live="assertive" aria-atomic="true" class="selected-state sr-only"></div>
       </div>
     <% end %>
     <%== cell("decidim/comments/comment_form", model, root_depth: root_depth) %>
