set color only to the title, not the whole block

--- a/decidim-participatory_processes/app/cells/decidim/participatory_processes/process_g/show.erb
+++ b/decidim-participatory_processes/app/cells/decidim/participatory_processes/process_g/show.erb
@@ -6,7 +6,7 @@
   <% end %>
 
   <div class="card__grid-text">
-    <h3 class="h4">
+    <h3 class="h4 text-secondary">
       <%= title %>
     </h3>
     <%# REDESIGN_PENDING: replace static fields %>
