--- a/decidim-blogs/app/cells/decidim/blogs/post_g/show.erb
+++ b/decidim-blogs/app/cells/decidim/blogs/post_g/show.erb
@@ -6,7 +6,7 @@
   <% end %>
 
   <div class="card__grid-text">
-    <h3 class="h4">
+    <h3 class="h4 text-secondary">
       <%= title %>
     </h3>
     <div>
