--- a/decidim-core/app/cells/decidim/endorsers_list/full.erb
+++ b/decidim-core/app/cells/decidim/endorsers_list/full.erb
@@ -1,10 +1,6 @@
 <div id="dropdown-menu-endorsers-list" class="endorsers-list">
   <div class="endorsers-list__text"><%= t("decidim.endorsers_list.endorsed_by") %></div>
   <div class="endorsers-list__grid">
-    <% full_endorsers.each do |endorser| %>
-      <span class="endorsers-list__avatar">
-        <%= cell "decidim/author", endorser, layout: :avatar %>
-      </span>
-    <% end %>
+    <%= render :full_endorsers_list %>
   </div>
 </div>
