add metrics content block

--- a/decidim-core/app/packs/stylesheets/decidim/redesigned_application.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/redesigned_application.scss
@@ -46,6 +46,7 @@
   @import "stylesheets/decidim/redesigned_modal_update.scss";
   @import "stylesheets/decidim/redesigned_floating_help.scss";
   @import "stylesheets/decidim/redesigned_cards.scss";
+  @import "stylesheets/decidim/redesigned_metrics.scss";
 }
 
 // On the other hand, the following styles match with specific routes
