--- a/decidim-participatory_processes/app/views/decidim/participatory_processes/participatory_processes/all_metrics.html.erb
+++ b/decidim-participatory_processes/app/views/decidim/participatory_processes/participatory_processes/all_metrics.html.erb
@@ -1,10 +1,24 @@
-<% if current_participatory_space.private_space? %>
-  <%= cell("decidim/announcement", t("participatory_processes.show.private_space", scope: "decidim"), callout_class: "alert") %>
-<% end %>
+<%= render layout:"layouts/decidim/shared/layout_center", locals: { columns: 8 } do %>
+  <div class="text-center py-10">
+    <h2 class="h3 md:h1 decorator inline-block text-left">
+      <%= t("decidim.pages.participatory_space.metrics.headline", name: translated_attribute(current_participatory_space.title)) %>
+    </h2>
+  </div>
 
-<div class="section" id="metrics">
-  <%= metrics.params %>
-  <%= metrics.medium_stats %>
-  <%= metrics.big_stats %>
-  <%= metrics.small_stats %>
-</div>
+  <% if current_participatory_space.private_space? %>
+    <%= cell("decidim/announcement", t("participatory_processes.show.private_space", scope: "decidim"), callout_class: "alert") %>
+  <% end %>
+
+  <div class="mb-24">
+    <div id="metrics" class="metric__container">
+      <%= metrics.params %>
+      <%= metrics.redesigned_charts %>
+    </div>
+
+    <%= link_to participatory_process_path(current_participatory_space), class: "button button__sm button__text-secondary mt-10" do %>
+      <%= icon "arrow-left-line" %>
+      <span><%= t("back_to_process", scope: "decidim.participatory_processes.participatory_process_steps.index") %></span>
+    <% end %>
+  </div>
+
+<% end %>
