Remove disable_dynamic_change data option in meetings filter

--- a/decidim-meetings/app/views/decidim/meetings/shared/_filters.html.erb
+++ b/decidim-meetings/app/views/decidim/meetings/shared/_filters.html.erb
@@ -18,8 +18,7 @@
       label: false,
       placeholder: t("decidim.meetings.meetings.filters.search"),
       title: t("decidim.meetings.meetings.filters.search"),
-      "aria-label": t("decidim.meetings.meetings.filters.search"),
-      data: { disable_dynamic_change: true } %>
+      "aria-label": t("decidim.meetings.meetings.filters.search") %>
     <button type="submit" aria-controls="meetings" aria_label="<%= t("decidim.meetings.meetings.filters.search") %>">
       <%= icon "search-line" %>
     </button>
