--- a/decidim-meetings/app/views/decidim/meetings/shared/_index.js.erb
+++ b/decidim-meetings/app/views/decidim/meetings/shared/_index.js.erb
@@ -1,8 +1,7 @@
 var $meetings = $('#meetings');
 
-// make sure that calendar modal will use the updated filter values
-var $calendarShare = $('#calendarShare');
-$calendarShare.remove();
+var $urlCalendarUrl = $('#urlCalendarUrl');
+$urlCalendarUrl.val("<%= short_url(route_name: "calendar", params: { filter: params.fetch(:filter, {}).try(:to_unsafe_hash) }) %>");
 
 $meetings.html('<%= j(render partial: "decidim/meetings/shared/meetings").strip.html_safe %>');
 
