disable also in registration (specifity)

--- a/decidim-conferences/app/packs/stylesheets/decidim/conferences/_registration.scss
+++ b/decidim-conferences/app/packs/stylesheets/decidim/conferences/_registration.scss
@@ -29,7 +29,7 @@
     }
   }
 
-  &:hover &-button{
+  &:hover &-button:not([disabled]){
     @apply bg-secondary text-white border-transparent;
   }
 
