--- a/decidim-assemblies/app/views/decidim/assemblies/assemblies/index.html.erb
+++ b/decidim-assemblies/app/views/decidim/assemblies/assemblies/index.html.erb
@@ -19,8 +19,7 @@ edit_link(
 <% content_for :aside do %>
   <h1 class="h3 md:h1 decorator"><%= t("decidim.menu.assemblies") %></h1>
 
-  <%#= render partial: "filters" %>
-  <%= render partial: "decidim/shared/participatory_space_filters/show" %>
+  <%= render partial: "decidim/shared/filters" %>
 <% end %>
 
 <%= render layout:"layouts/decidim/shared/layout_two_col" do %>
