--- a/decidim-assemblies/app/views/decidim/assemblies/assemblies/index.js.erb
+++ b/decidim-assemblies/app/views/decidim/assemblies/assemblies/index.js.erb
@@ -2,6 +2,8 @@ var $grid = $('#parent-assemblies');
 var $assembliesCount = $('#assemblies-count');
 var $assembliesFilter = $('#assemblies-filter');
 
+// REDESIGN_PENDIGN: update / remove stuff
+
 $grid.find('.card-grid').html('<%= j(render(parent_assemblies)).strip.html_safe %>');
 $assembliesCount.html('<%= j(render partial: "count").strip.html_safe %>');
 $assembliesFilter.html('<%= j(render partial: "decidim/assemblies/filter_by_type") %>');
