--- a/decidim-meetings/app/cells/decidim/meetings/meeting_l/image.erb
+++ b/decidim-meetings/app/cells/decidim/meetings/meeting_l/image.erb
@@ -2,6 +2,6 @@
   <div class="meeting__calendar">
     <div class="meeting__calendar-month"><%= l(meeting.start_time, format: "%b") %></div>
     <div class="meeting__calendar-day"><%= l(meeting.start_time, format: "%d") %></div>
-    <div class="meeting__calendar-time"><%= l(meeting.start_time, format: "%H:%m") %></div>
+    <div class="meeting__calendar-time"><%= l(meeting.start_time, format: "%H:%M") %></div>
   </div>
 </div>
