--- a/decidim-core/app/views/layouts/decidim/_redesigned_head.html.erb
+++ b/decidim-core/app/views/layouts/decidim/_redesigned_head.html.erb
@@ -27,7 +27,7 @@
 <link rel="manifest" href="/manifest.webmanifest">
 
 <%= stylesheet_pack_tag "redesigned_decidim_core", media: "all" %>
-<%= content_for :css_content %>
+<%= yield :css_content %>
 
 <%= invisible_captcha_styles %>
 <%= organization_colors %>
