--- a/decidim-assemblies/app/views/layouts/decidim/redesigned_assembly.html.erb
+++ b/decidim-assemblies/app/views/layouts/decidim/redesigned_assembly.html.erb
@@ -15,7 +15,7 @@
 
 <%= render "layouts/decidim/redesigned_application" do %>
   <main>
-    <%#= render partial: "layouts/decidim/process_header" %>
+    <%= render partial: "layouts/decidim/assembly_header" %>
     <%= yield %>
   </main>
 <% end %>
