--- a/decidim-core/app/packs/stylesheets/decidim/redesigned_application.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/redesigned_application.scss
@@ -48,6 +48,7 @@
   @import "stylesheets/decidim/redesigned_statistics.scss";
   @import "stylesheets/decidim/redesigned_content_blocks.scss";
   @import "stylesheets/decidim/redesigned_documents.scss";
+  @import "stylesheets/decidim/redesigned_photos.scss";
   @import "stylesheets/decidim/redesigned_cards.scss";
 }
 
