revert changes card_m

--- a/decidim-core/app/cells/decidim/card_m/comments_counter.erb
+++ b/decidim-core/app/cells/decidim/card_m/comments_counter.erb
@@ -1,2 +1,3 @@
-<%= icon("chat-1-line", class: "text-gray fill-current flex-none") %>
-<span><%= comments_count %></span>
+<%= icon("comment-square", class: "icon--small", aria_label: "#{t("decidim.comments.comments_count")}:", role: "img") %>
+<%= " " %>
+<%= comments_count %>
