--- a/decidim-core/app/cells/decidim/card_m/header.erb
+++ b/decidim-core/app/cells/decidim/card_m/header.erb
@@ -1,15 +1,16 @@
 <div class="card__header">
   <% if has_link_to_resource? %>
     <%= link_to resource_path, class: "card__link" do %>
-      <div class="card__list-title">
+      <div class="card__title">
         <%= title %>
       </div>
     <% end %>
   <% else %>
     <div class="card__link">
-      <div class="card__list-title">
+      <div class="card__title">
         <%= title %>
       </div>
     </div>
   <% end %>
+  <%= render_authorship if has_authors? %>
 </div>
