--- a/decidim-core/app/cells/decidim/card_m/status.erb
+++ b/decidim-core/app/cells/decidim/card_m/status.erb
@@ -1,7 +1,9 @@
-<div class="card__list-metadata">
-  <% statuses.each do |status_name| %>
-    <span class="card-data__item <%= status_name %>_status">
-      <%= send("#{status_name}_status") %>
-    </span>
-  <% end %>
+<div class="card__status">
+  <ul class="card-data">
+    <% statuses.each do |status_name| %>
+      <li class="card-data__item <%= status_name %>_status">
+        <%= send("#{status_name}_status") %>
+      </li>
+    <% end %>
+  </ul>
 </div>
