--- a/decidim-conferences/app/views/decidim/conferences/media/index.html.erb
+++ b/decidim-conferences/app/views/decidim/conferences/media/index.html.erb
@@ -31,10 +31,14 @@ edit_link(
 
   <% if current_participatory_space.attachments.any? %>
     <section id="conference-media-photos" class="conference__media-section">
+      <h2 class="h4 md:h3 decorator"><%= t("decidim.application.photos.related_photos") %></h2>
+
       <%= cell("decidim/photos_list", current_participatory_space.photos) %>
     </section>
 
     <section id="conference-media-documents" class="conference__media-section">
+      <h2 class="h4 md:h3 decorator"><%= t("decidim.application.documents.related_documents") %></h2>
+
       <%# REDESIGN_PENDING: maybe this partial would fit better in a cell %>
       <%= render partial: "decidim/application/documents", locals: { documents: current_participatory_space.documents } %>
     </section>
