--- a/decidim-assemblies/app/views/decidim/assemblies/assemblies/show.html.erb
+++ b/decidim-assemblies/app/views/decidim/assemblies/assemblies/show.html.erb
@@ -75,7 +75,19 @@ edit_link(
   <% end %>
 
   <section class="content-block">
-    <%= attachments_for current_participatory_space %>
+    <div class="content-block__title">
+      <h2 class="h2 decorator"><%= t("decidim.application.documents.related_documents") %></h2>
+    </div>
+
+    <%= render partial: "decidim/application/documents", locals: { documents: current_participatory_space.documents } %>
+  </section>
+
+  <section class="content-block">
+    <div class="content-block__title">
+      <h2 class="h2 decorator"><%= t("decidim.application.photos.related_photos") %></h2>
+    </div>
+
+    <%= cell("decidim/photos_list", current_participatory_space.photos) %>
   </section>
 
   <% if false %>
