--- a/decidim-conferences/app/packs/stylesheets/decidim/conferences/_media.scss
+++ b/decidim-conferences/app/packs/stylesheets/decidim/conferences/_media.scss
@@ -1,6 +1,6 @@
 .conference__media{
   &-section{
-    @apply mt-16 last:mb-16 md:last:mb-36 xl:max-w-[75%];
+    @apply mt-16 last:mb-16 md:last:mb-36 xl:max-w-[75%] space-y-10;
 
     p{
       @apply mt-4 text-gray-2 text-md;
