Move js_content to body

--- a/decidim-core/app/views/layouts/decidim/_redesigned_application.html.erb
+++ b/decidim-core/app/views/layouts/decidim/_redesigned_application.html.erb
@@ -22,6 +22,7 @@
     <%= render partial: "decidim/shared/authorization_modal" %>
     <%= render partial: "layouts/decidim/redesigned_js_configuration" %>
     <%= render partial: "layouts/decidim/cors" if Decidim.cors_enabled %>
+    <%= yield :js_content %>
     <%= snippets.display(:foot) %>
   </body>
 </html>
